# src/server.js
@@ -22,6 +22,14 @@ export const setupServer = () => {
   app.use(logger);
   app.use(cors());
   app.use(express.json());
+  app.get('/', (req, res) => {
+    res.json({
+      message: 'Hello world! Meet our 7WaterTracker!',
+    });
+  });
+  app.get('/health-check', (req, res) => {
+    res.status(200).send('OK');
+  });
   app.use('/api-docs', swaggerDocs());
   app.get('/', (req, res) => {
     res.json({
@@ -38,3 +46,4 @@ export const setupServer = () => {
     console.log(`Server is running on port ${port}`);
   });
 };
+
